--- a/Website_Movie Castle/Website_Movie Castle.csproj
+++ b/Website_Movie Castle/Website_Movie Castle.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>Website_Movie_Castle</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySql.Data" Version="8.0.32.1" />
+  </ItemGroup>
+
 </Project>
